--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
   	<link rel="icon" type="image/png" sizes="192x192" href="public/android-chrome-192x192.png"/>
   	<link rel="icon" type="image/png" sizes="512x512" href="public/android-chrome-512x512.png"/>
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="public/apple-touch-icon.png"/>
-    <!--
-      >!-- Panelbear --<
+
+      <!-- Panelbear -->
       <script async src="https://cdn.panelbear.com/analytics.js?site=8ekj5bY3JJx"></script>
       <script>
           window.panelbear = window.panelbear || function() { (window.panelbear.q = window.panelbear.q || []).push(arguments); };
           panelbear('config', { site: '8ekj5bY3JJx' });
       </script>
 
-      >!-- Default Statcounter code for My Personal Website https://www.anthonydu.com --<
+      <!-- Default Statcounter code for My Personal Website https://www.anthonydu.com -->
       <script type="text/javascript">
         var sc_project=12802423; 
         var sc_invisible=1; 
@@ -46,8 +46,8 @@
       </script>
       <script type="text/javascript" src="https://www.statcounter.com/counter/counter.js" async></script>
       <noscript><div class="statcounter"><a title="Web Analytics" href="https://statcounter.com/" target="_blank"><img class="statcounter" src="https://c.statcounter.com/12802423/0/b192c111/1/" alt="Web Analytics" referrerPolicy="no-referrer-when-downgrade"></a></div></noscript>
-      >!-- End of Statcounter Code --<
-    -->
+      <!-- End of Statcounter Code -->
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
