--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="public/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="A motivated computer science and engineering student with strong passion for cutting edge technologies, who seeks to learn, innovate, and solve challenging problems."/>
     <meta name="robots" content="nofollow"/>
@@ -11,7 +11,7 @@
     <meta property="og:type" content="website"/>
     <meta property="og:locale" content="en_US"/>
     <meta property="og:url" content="https://www.anthonydu.com"/>
-    <meta property="og:image" content="public/thumbnail.jpg"/>
+    <meta property="og:image" content="/thumbnail.jpg"/>
     <meta property="og:description" content="A motivated computer science and engineering student with strong passion for cutting edge technologies, who seeks to learn, innovate, and solve challenging problems."/>
     <meta property="og:site_name" content="Anthony Du"/>
 
@@ -25,11 +25,11 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" integrity="sha256-KTPJY0ik6ufLv48oDKCYFYaptcCX75UrmWytfSjy+tA=" crossorigin="anonymous">
     
-  	<link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png"/>
-  	<link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png"/>
-  	<link rel="icon" type="image/png" sizes="192x192" href="public/android-chrome-192x192.png"/>
-  	<link rel="icon" type="image/png" sizes="512x512" href="public/android-chrome-512x512.png"/>
-    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="public/apple-touch-icon.png"/>
+  	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"/>
+  	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"/>
+  	<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png"/>
+  	<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png"/>
+    <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="/apple-touch-icon.png"/>
 
       <!-- Panelbear -->
       <script async src="https://cdn.panelbear.com/analytics.js?site=8ekj5bY3JJx"></script>
